[gd_scene load_steps=4 format=3 uid="uid://7fttplgpk684"]

[ext_resource type="Script" uid="uid://6tiiv2n6l1k4" path="res://scenes/ui/bakery/shop/shop.gd" id="1_moneg"]
[ext_resource type="Texture2D" uid="uid://dd4d28mag225p" path="res://assets/Objects/slot.png" id="1_nlmgb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_moneg"]
bg_color = Color(0.5683686, 0.3807148, 0.20647883, 1)

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_moneg")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_moneg")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Yeast2" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StorageContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/Yeast2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="Flour" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/Yeast2/StorageContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Value" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/Yeast2/StorageContainer/Flour"]
layout_mode = 2
text = "Мука: 0"

[node name="Water" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/Yeast2/StorageContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Value" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/Yeast2/StorageContainer/Water"]
layout_mode = 2
text = "Вода: 0"

[node name="Yeast" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/Yeast2/StorageContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Value" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/Yeast2/StorageContainer/Yeast"]
layout_mode = 2
text = "Дрожжи: 0"

[node name="Wick" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/Yeast2"]
layout_mode = 2
size_flags_horizontal = 8
text = "Фетиль: 0"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Gold" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Золото: 0"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
icon = ExtResource("1_nlmgb")
flat = true

[node name="Label2" type="Label" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "КУПИТЬ
ФЕТИЛЬ
(1 золото)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
icon = ExtResource("1_nlmgb")
flat = true

[node name="Label4" type="Label" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "УЛУЧШИТЬ
ФЕТИЛЬ
(5 золота)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("1_nlmgb")
flat = true

[node name="Label3" type="Label" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "КУПИТЬ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -380.0
offset_top = -78.0
offset_right = 380.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button4" type="Button" parent="Panel/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("1_nlmgb")
flat = true

[node name="Label" type="Label" parent="Panel/MarginContainer3/Button4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ВЫХОД"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/MarginContainer3/Button4" to="." method="_on_button_4_pressed"]
